--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-<main>
-    <h1>Hello from Angular 2 App with Webpack</h1>
-</main>
+<html>
+<head>
+    <title>Client</title>
+</head>
+<body>
+<sw-ico-prefetch></sw-ico-prefetch>
+<div class="main_container app">
+    <sw-navbar *ngIf="state.isLoaded"></sw-navbar>
+    <div class="main-content">
+        <router-outlet></router-outlet>
+    </div>
+    <sw-loader-screen *ngIf="!state.isLoaded"></sw-loader-screen>
+</div>
+</body>
+</html>
