--- a/src/app/app_modules/styles/colors.scss
+++ b/src/app/app_modules/styles/colors.scss
@@ -5,7 +5,8 @@ $grey-4: #777;
 $grey-5: #999;
 $grey-6: #bbb;
 $grey-7: #ddd;
-$grey-8: #eee;
+$grey-8: #eaeaea;
+$grey-9: #efefef;
 
 $blue-1: #0A86C4;
 $blue-2: #0B7EB8;
