--- a/src/app/app_modules/styles/general.scss
+++ b/src/app/app_modules/styles/general.scss
@@ -19,6 +19,6 @@ input, select, textarea, button {
 body {
   display: block;
   height: 100%;
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: $grey-8;
+  font-family: Lato, Helvetica, Arial, sans-serif;
+  background-color: $grey-9;
 }
