--- a/src/app/app_modules/components/weather-widget/weather-widget.component.scss
+++ b/src/app/app_modules/components/weather-widget/weather-widget.component.scss
@@ -3,7 +3,9 @@
 .weather-widget {
   .line {
     min-height: $space-4;
+    margin-left: $space-2;
     margin-bottom: $space-2;
+    margin-right: $space-2;
     & > div:first-child {
       float: left;
       width: $space-4; height: $space-4;
