--- a/src/app/app_modules/components/layout/navbar/navbar.component.scss
+++ b/src/app/app_modules/components/layout/navbar/navbar.component.scss
@@ -1,23 +1,36 @@
 @import '../../../styles/sizes';
 @import '../../../styles/colors';
 
+sw-navbar {
+  display: block;
+  height: $navbar-height;
+}
+
 .navbar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
   height: $navbar-height;
   background-color: $blue-1;
   box-shadow: 0 0 8px $grey-5;
 
   &-button {
-    width: $navbar-height; height: $navbar-height;
+    width: $navbar-height;
+    height: $navbar-height;
     padding: 10px;
     background-color: transparent;
     border: none;
     cursor: pointer;
 
-    .ico { fill:#fff; }
+    .ico {
+      fill: #fff;
+    }
 
     &.search {
       position: absolute;
-      top: 0; right:0;
+      top: 0;
+      right: 0;
       padding: 12px;
     }
   }
@@ -34,15 +47,19 @@
       line-height: $navbar-height;
       border: none;
       background-color: transparent;
-      color:#fff;
+      color: #fff;
     }
   }
 
   &.focused {
     background-color: #fff;
 
-    & .navbar-button .ico { fill:$blue-1; }
+    & .navbar-button .ico {
+      fill: $blue-1;
+    }
 
-    & .navbar-search-input { color:$grey-1; }
+    & .navbar-search-input {
+      color: $grey-1;
+    }
   }
 }
