--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,10 @@
 
 .main-content {
 
-  h1, h2, h3, p {
+  h1, h2, h3 {
+    margin: 0.5em $space-3;
+  }
+  p {
     margin: 1em $space-3;
   }
 
@@ -13,6 +16,10 @@
     background-color: #fff;
     border-radius: 4px;
     box-shadow: 0 0 8px $grey-6;
+
+    h1, h2, h3, p {
+      margin: 1em $space-3;
+    }
 
     & > *:first-child {
       margin-top: 0;
@@ -32,6 +39,10 @@
         display: block;
         margin: 0 $space-2;
 
+        & + label {
+          margin-top: $space-2;
+        }
+
         & > span {
           display: inline-block;
           margin-bottom: 1em;
@@ -41,6 +52,16 @@
         & > input,
         & > select {
           width: 100%;
+          padding: 5px 0;
+          border-bottom: 1px solid $grey-7;
+
+          &:focus {
+            border-color: $grey-4;
+          }
+
+          &[required]:valid {
+            border-color: $green-1;
+          }
         }
 
         & > textarea {
