--- a/src/app/app_modules/components/layout/navbar/navbar.component.html
+++ b/src/app/app_modules/components/layout/navbar/navbar.component.html
@@ -1,7 +1,10 @@
 <div class="navbar" [class.focused]="focusState">
     <button class="navbar-button home" [ico]="'home'" routerLink="/"></button>
     <div class="navbar-search">
-        <input type="text" class="navbar-search-input" title="search" placeholder="search..." (focus)="setFocusState(true)" (blur)="setFocusState(false)"/>
+        <input type="text" class="navbar-search-input" title="search" placeholder="search..."
+               (focus)="setFocusState(true)"
+               (blur)="setFocusState(false)"
+        />
     </div>
-    <button class="navbar-button search" [ico]="'loop'"></button>
+    <button class="navbar-button search" [ico]="'search'" [tooltip]="'left:This is dummy button!'"></button>
 </div>
