--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <div *ngIf="state.isLoaded">
     <h1>Dashboard</h1>
-    <div class="widget">
+    <div class="widget" [tooltip]="'top:div.widget'">
         <p>"Weather" page gets data from yahoo api during "Loading" process</p>
         <a routerLink="weather">To Weather</a>
     </div>
-    <div class="widget">
+    <div class="widget" [tooltip]="'top:div.widget'">
         <p>Form for push notification messages testing</p>
-        <form (submit)="submitMessage($event)">
+        <form (submit)="submitMessage($event)" [tooltip]="'top:div.widget > form'">
             <label>
                 <span>Notification message</span>
                 <input type="text" [(ngModel)]="data.title" name="title" required placeholder="Title..."/>
